added tops and users successfully!

--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -71,9 +71,9 @@
           ID
         </th>
 
-        <%# <th>
+        <th>
           User
-        </th> %>
+        </th>
 
         <th>
           Price
@@ -105,9 +105,9 @@
           <%= a_top.id %>
         </td>
 
-        <%# <td> %>
-          <%# <%= a_top.poster.username %>
-        <%# </td> %>
+        <td>
+          <%= a_top.user.username %>
+        </td>
 
         <td>
           <%= a_top.price %>
