editing show and index for shoes and bottoms edited the uername awareness and also to display images.

--- a/app/views/bottoms/index.html.erb
+++ b/app/views/bottoms/index.html.erb
@@ -110,7 +110,7 @@
         </td>
 
         <td>
-          <%= a_bottom.user_id %>
+          <%= a_bottom.user.username %>
         </td>
 
         <td>
@@ -118,7 +118,7 @@
         </td>
 
         <td>
-          <%= a_bottom.image %>
+          <img src=<%= a_bottom.image %>>
         </td>
 
         <td>
