--- a/app/views/shoes/index.html.erb
+++ b/app/views/shoes/index.html.erb
@@ -110,7 +110,7 @@
         </td>
 
         <td>
-          <%= a_shoe.user_id %>
+          <%= a_shoe.user.username %>
         </td>
 
         <td>
@@ -118,7 +118,7 @@
         </td>
 
         <td>
-          <%= a_shoe.image %>
+          <img src=<%= a_shoe.image %>>
         </td>
 
         <td>
