--- a/app/views/shoes/show.html.erb
+++ b/app/views/shoes/show.html.erb
@@ -19,12 +19,12 @@
     </div>
 
     <dl>
-      <dt>
-        User
-      </dt>
-      <dd>
-        <%= @the_shoe.user_id %>
-      </dd>
+      <%# <dt> %>
+        <%# User %>
+      <%# </dt> %>
+      <%# <dd> %>
+        <%# <%= @the_shoe.user_id %> 
+      <%# </dd> %>
 
       <dt>
         Price
@@ -37,7 +37,7 @@
         Image
       </dt>
       <dd>
-        <%= @the_shoe.image %>
+        <img src=<%= @the_shoe.image %>>
       </dd>
 
       <dt>
