--- a/app/views/bottoms/show.html.erb
+++ b/app/views/bottoms/show.html.erb
@@ -19,12 +19,12 @@
     </div>
 
     <dl>
-      <dt>
-        User
-      </dt>
-      <dd>
-        <%= @the_bottom.user_id %>
-      </dd>
+      <%# <dt> %>
+        <%# User %>
+      <%# </dt> %>
+      <%# <dd> %>
+        <%# <%= @the_bottom.user_id %> 
+      <%# </dd> %>
 
       <dt>
         Price
