--- a/app/views/outfits/index.html.erb
+++ b/app/views/outfits/index.html.erb
@@ -6,8 +6,6 @@
   </div>
 </div>
 
-<%# <hr> %>
-
 <%# <div>
   <div>
     <h2>
@@ -57,6 +55,123 @@
 <hr>
 <div>
   <div>
+  <h3>Saved tops</h3>
+    <table>
+      <tr>
+        <%# <th>
+          ID
+        </th> %>
+
+        <th>
+          Top
+        </th>
+
+        <th>
+          User
+        </th>
+
+        <th>
+          Created at
+        </th>
+
+        <th>
+          Updated at
+        </th>
+
+        <th>
+          Details
+        </th>
+      </tr>
+
+      <% @list_of_outfits.each do |an_outfit| %>
+      <tr>
+        <%# <td>
+          <%= an_outfit.id %>
+        <%# </td>  %>
+
+        <td>
+          <%= an_outfit.top_id %>
+        </td>
+
+        <td>
+          <%= an_outfit.user.username %>
+        </td>
+
+        <td>
+          <%= time_ago_in_words(an_outfit.created_at) %> ago
+        </td>
+        <td>
+          <%= time_ago_in_words(an_outfit.updated_at) %> ago
+        </td>
+
+        <td>
+          <a href="/outfits/<%= an_outfit.id %>">
+            Show details
+          </a>
+        </td>
+      </tr>
+      <% end %>
+    </table>
+  <hr>
+  <h3>Saved bottoms</h3>
+    <table>
+      <tr>
+        <%# <th>
+          ID
+        </th> %>
+
+        <th>
+          Bottom
+        </th>
+
+        <th>
+          User
+        </th>
+
+        <th>
+          Created at
+        </th>
+
+        <th>
+          Updated at
+        </th>
+
+        <th>
+          Details
+        </th>
+      </tr>
+
+      <% @list_of_outfits.each do |an_outfit| %>
+      <tr>
+        <%# <td>
+          <%= an_outfit.id %>
+        <%# </td>  %>
+
+        <td>
+          <%= an_outfit.bottom_id %>
+        </td>
+
+        <td>
+          <%= an_outfit.user.username %>
+        </td>
+
+        <td>
+          <%= time_ago_in_words(an_outfit.created_at) %> ago
+        </td>
+        <td>
+          <%= time_ago_in_words(an_outfit.updated_at) %> ago
+        </td>
+
+        <td>
+          <a href="/outfits/<%= an_outfit.id %>">
+            Show details
+          </a>
+        </td>
+      </tr>
+      <% end %>
+    </table>
+  <hr>
+  <h3>Saved shoes</h3>
     <table>
       <tr>
         <%# <th>
@@ -128,7 +243,10 @@
       </tr>
       <% end %>
     </table>
+  <hr>
   </div>
+  
+
 </div>
 
 <hr>
