--- a/app/views/outfits/index.html.erb
+++ b/app/views/outfits/index.html.erb
@@ -55,20 +55,12 @@
 <hr>
 <div>
   <div>
-  <h3>Saved tops</h3>
+  <h3>Saved clothes</h3>
     <table>
       <tr>
         <%# <th>
           ID
         </th> %>
-
-        <th>
-          Top
-        </th>
-
-        <th>
-          User
-        </th>
 
         <th>
           Created at
@@ -88,145 +80,6 @@
         <%# <td>
           <%= an_outfit.id %>
         <%# </td>  %>
-
-        <td>
-          <%= an_outfit.top_id %>
-        </td>
-
-        <td>
-          <%= an_outfit.user.username %>
-        </td>
-
-        <td>
-          <%= time_ago_in_words(an_outfit.created_at) %> ago
-        </td>
-        <td>
-          <%= time_ago_in_words(an_outfit.updated_at) %> ago
-        </td>
-
-        <td>
-          <a href="/outfits/<%= an_outfit.id %>">
-            Show details
-          </a>
-        </td>
-      </tr>
-      <% end %>
-    </table>
-  <hr>
-  <h3>Saved bottoms</h3>
-    <table>
-      <tr>
-        <%# <th>
-          ID
-        </th> %>
-
-        <th>
-          Bottom
-        </th>
-
-        <th>
-          User
-        </th>
-
-        <th>
-          Created at
-        </th>
-
-        <th>
-          Updated at
-        </th>
-
-        <th>
-          Details
-        </th>
-      </tr>
-
-      <% @list_of_outfits.each do |an_outfit| %>
-      <tr>
-        <%# <td>
-          <%= an_outfit.id %>
-        <%# </td>  %>
-
-        <td>
-          <%= an_outfit.bottom_id %>
-        </td>
-
-        <td>
-          <%= an_outfit.user.username %>
-        </td>
-
-        <td>
-          <%= time_ago_in_words(an_outfit.created_at) %> ago
-        </td>
-        <td>
-          <%= time_ago_in_words(an_outfit.updated_at) %> ago
-        </td>
-
-        <td>
-          <a href="/outfits/<%= an_outfit.id %>">
-            Show details
-          </a>
-        </td>
-      </tr>
-      <% end %>
-    </table>
-  <hr>
-  <h3>Saved shoes</h3>
-    <table>
-      <tr>
-        <%# <th>
-          ID
-        </th> %>
-
-        <th>
-          Top
-        </th>
-
-        <th>
-          Bottom
-        </th>
-
-        <th>
-          Shoes
-        </th>
-
-        <th>
-          User
-        </th>
-
-        <th>
-          Created at
-        </th>
-
-        <th>
-          Updated at
-        </th>
-
-        <th>
-        </th>
-      </tr>
-
-      <% @list_of_outfits.each do |an_outfit| %>
-      <tr>
-        <%# <td>
-          <%= an_outfit.id %>
-        <%# </td>  %>
-
-        <td>
-          <%= an_outfit.top_id %>
-        </td>
-
-        <td>
-          <%= an_outfit.bottom_id %>
-        </td>
-
-        <td>
-          <%= an_outfit.shoes_id %>
-        </td>
-
-        <td>
-          <%= an_outfit.user.username %>
-        </td>
 
         <td>
           <%= time_ago_in_words(an_outfit.created_at) %> ago
@@ -245,8 +98,114 @@
     </table>
   <hr>
   </div>
-  
-
 </div>
 
+
+<div id="carouselExampleCaptions1" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleCaptions1" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions1" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions1" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="https://www.jcrew.com/s7-img-facade/AW823_SU7325?fmt=jpeg&qlt=90,0&resMode=sharp&op_usm=.1,0,0,0&crop=0,0,0,0&wid=850&hei=850" class="w-25 h-25" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>First slide label</h5>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="https://www.jcrew.com/s7-img-facade/K1313_SU4766?fmt=jpeg&qlt=90,0&resMode=sharp&op_usm=.1,0,0,0&crop=0,0,0,0&wid=850&hei=850" class="w-25 h-25" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Second slide label</h5>>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="https://www.jcrew.com/s7-img-facade/AW108_SU7310?fmt=jpeg&qlt=90,0&resMode=sharp&op_usm=.1,0,0,0&crop=0,0,0,0&wid=850&hei=850" class="w-25 h-25" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Third slide label</h5>
+      </div>
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions1"  data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions1"  data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+
+<div id="carouselExampleCaptions2" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleCaptions2" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions2" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions2" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="https://www.jcrew.com/s7-img-facade/AJ420_BL8133?fmt=jpeg&qlt=90,0&resMode=sharp&op_usm=.1,0,0,0&crop=0,0,0,0&wid=850&hei=850" class="w-25 h-25" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>First slide label</h5>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="https://www.jcrew.com/s7-img-facade/AV441_WY4980?fmt=jpeg&qlt=90,0&resMode=sharp&op_usm=.1,0,0,0&crop=0,0,0,0&wid=850&hei=850" class="w-25 h-25" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Second slide label</h5>>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="https://www.jcrew.com/s7-img-facade/M2340_EB0648?fmt=jpeg&qlt=90,0&resMode=sharp&op_usm=.1,0,0,0&crop=0,0,0,0&wid=850&hei=850" class="w-25 h-25" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Third slide label</h5>
+      </div>
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions2"  data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions2"  data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+
+<div id="carouselExampleCaptions3" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleCaptions3" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions3" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions3" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="https://i.s-madewell.com/is/image/madewell/MC998_NA7207_ld?wid=1400&hei=1779&fmt=jpeg&fit=crop&qlt=75,1&resMode=bisharp&op_usm=0.5,1,5,0" class="w-25 h-25" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>First slide label</h5>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="https://i.s-madewell.com/is/image/madewell/MA979_BR6755_d2?wid=1400&hei=1779&fmt=jpeg&fit=crop&qlt=75,1&resMode=bisharp&op_usm=0.5,1,5,0" class="w-25 h-25" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Second slide label</h5>>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="https://i.s-madewell.com/is/image/madewell/MC704_EB9596_ld?wid=1400&hei=1779&fmt=jpeg&fit=crop&qlt=75,1&resMode=bisharp&op_usm=0.5,1,5,0" class="w-25 h-25" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Third slide label</h5>
+      </div>
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions3"  data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions3"  data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
 <hr>
