--- a/app/views/user_authentication/sign_up.html.erb
+++ b/app/views/user_authentication/sign_up.html.erb
@@ -1,7 +1,11 @@
 <h1>Sign up to Wardrobe Wizard!</h1>
 
 <form action="/insert_user" method="post">
-
+  <div> 
+    <label for="username_box">Username</label>
+    <input id="username_box" name="query_username" placeholder="Choose a username..." type="text">
+  </div>
+  
   <div>
     <label for="email_box">Email</label>
     <input id="email_box" name="query_email" placeholder="Choose a email..." type="text">
