--- a/app/views/outfits/index.html.erb
+++ b/app/views/outfits/index.html.erb
@@ -55,7 +55,7 @@
 <hr>
 <div>
   <div>
-  <h3>Saved clothes</h3>
+  <h2>Saved clothes</h2>
     <table>
       <tr>
         <%# <th>
@@ -127,21 +127,21 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="https://www.jcrew.com/s7-img-facade/AW823_SU7325?fmt=jpeg&qlt=90,0&resMode=sharp&op_usm=.1,0,0,0&crop=0,0,0,0&wid=850&hei=850" class="w-25 h-25" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h1>First slide label</h1>
+      <img src="https://www.jcrew.com/s7-img-facade/AW823_SU7325?fmt=jpeg&qlt=90,0&resMode=sharp&op_usm=.1,0,0,0&crop=0,0,0,0&wid=850&hei=850" alt="...">
+      <div class="carousel-caption d-none d-sm-flex">
+        <h3>First slide label</h3>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="https://www.jcrew.com/s7-img-facade/K1313_SU4766?fmt=jpeg&qlt=90,0&resMode=sharp&op_usm=.1,0,0,0&crop=0,0,0,0&wid=850&hei=850" class="w-25 h-25" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h1>Second slide label</h1>>
+      <img src="https://www.jcrew.com/s7-img-facade/K1313_SU4766?fmt=jpeg&qlt=90,0&resMode=sharp&op_usm=.1,0,0,0&crop=0,0,0,0&wid=850&hei=850" alt="...">
+      <div class="carousel-caption d-none d-sm-flex">
+        <h3>Second slide label</h3>>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="https://www.jcrew.com/s7-img-facade/AW108_SU7310?fmt=jpeg&qlt=90,0&resMode=sharp&op_usm=.1,0,0,0&crop=0,0,0,0&wid=850&hei=850" class="w-25 h-25" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h1>Third slide label</h1>
+      <img src="https://www.jcrew.com/s7-img-facade/AW108_SU7310?fmt=jpeg&qlt=90,0&resMode=sharp&op_usm=.1,0,0,0&crop=0,0,0,0&wid=850&hei=850" alt="...">
+      <div class="carousel-caption d-none d-sm-flex">
+        <h3>Third slide label</h3>
       </div>
     </div>
   </div>
@@ -163,21 +163,21 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="https://www.jcrew.com/s7-img-facade/AJ420_BL8133?fmt=jpeg&qlt=90,0&resMode=sharp&op_usm=.1,0,0,0&crop=0,0,0,0&wid=850&hei=850" class="w-25 h-25" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h1>First slide label</h1>
+      <img src="https://www.jcrew.com/s7-img-facade/AJ420_BL8133?fmt=jpeg&qlt=90,0&resMode=sharp&op_usm=.1,0,0,0&crop=0,0,0,0&wid=850&hei=850" alt="...">
+      <div class="carousel-caption d-none d-sm-flex">
+        <h3>First slide label</h3>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="https://www.jcrew.com/s7-img-facade/AV441_WY4980?fmt=jpeg&qlt=90,0&resMode=sharp&op_usm=.1,0,0,0&crop=0,0,0,0&wid=850&hei=850" class="w-25 h-25" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h1>Second slide label</h1>>
+      <img src="https://www.jcrew.com/s7-img-facade/AV441_WY4980?fmt=jpeg&qlt=90,0&resMode=sharp&op_usm=.1,0,0,0&crop=0,0,0,0&wid=850&hei=850" alt="...">
+      <div class="carousel-caption d-none d-sm-flex">
+        <h3>Second slide label</h3>>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="https://www.jcrew.com/s7-img-facade/M2340_EB0648?fmt=jpeg&qlt=90,0&resMode=sharp&op_usm=.1,0,0,0&crop=0,0,0,0&wid=850&hei=850" class="w-25 h-25" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h1>Third slide label</h1>
+      <img src="https://www.jcrew.com/s7-img-facade/M2340_EB0648?fmt=jpeg&qlt=90,0&resMode=sharp&op_usm=.1,0,0,0&crop=0,0,0,0&wid=850&hei=850" alt="...">
+      <div class="carousel-caption d-none d-sm-flex">
+        <h3>Third slide label</h3>
       </div>
     </div>
   </div>
@@ -199,21 +199,21 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="https://i.s-madewell.com/is/image/madewell/MC998_NA7207_ld?wid=1400&hei=1779&fmt=jpeg&fit=crop&qlt=75,1&resMode=bisharp&op_usm=0.5,1,5,0" class="w-25 h-25" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h1>First slide label</h1>
+      <img src="https://i.s-madewell.com/is/image/madewell/MC998_NA7207_ld?wid=1400&hei=1779&fmt=jpeg&fit=crop&qlt=75,1&resMode=bisharp&op_usm=0.5,1,5,0" alt="...">
+      <div class="carousel-caption d-none d-sm-flex">
+        <h3>First slide label</h3>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="https://i.s-madewell.com/is/image/madewell/MA979_BR6755_d2?wid=1400&hei=1779&fmt=jpeg&fit=crop&qlt=75,1&resMode=bisharp&op_usm=0.5,1,5,0" class="w-25 h-25" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h1>Second slide label</h1>>
+      <img src="https://i.s-madewell.com/is/image/madewell/MA979_BR6755_d2?wid=1400&hei=1779&fmt=jpeg&fit=crop&qlt=75,1&resMode=bisharp&op_usm=0.5,1,5,0" alt="...">
+      <div class="carousel-caption d-none d-sm-flex">
+        <h3>Second slide label</h3>>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="https://i.s-madewell.com/is/image/madewell/MC704_EB9596_ld?wid=1400&hei=1779&fmt=jpeg&fit=crop&qlt=75,1&resMode=bisharp&op_usm=0.5,1,5,0" class="w-25 h-25" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h1>Third slide label</h1>
+      <img src="https://i.s-madewell.com/is/image/madewell/MC704_EB9596_ld?wid=1400&hei=1779&fmt=jpeg&fit=crop&qlt=75,1&resMode=bisharp&op_usm=0.5,1,5,0" alt="...">
+      <div class="carousel-caption d-none d-sm-flex">
+        <h3>Third slide label</h3>
       </div>
     </div>
   </div>
